--- a/src/index.scss
+++ b/src/index.scss
@@ -1,9 +1,25 @@
 body {
-  margin: 48px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 60px;
+  font-family: Work Sans, "Helvetica Neue", sans-serif;
+  text-align: center;
 }
 
-.wrapper {
-  text-align: center;
+.title {
+  font-weight: 800;
+  font-size: 100px;
+  line-height: 80px;
+  margin: 0 0 40px 0;
+}
+
+.btn {
+  border: none;
+  background: none;
+  padding: 24px;
+  font-size: 18px;
+  font-family: Work Sans, "Helvetica Neue", sans-serif;
+  cursor: pointer;
+
+  &:focus {
+    outline: none;
+  }
 }
